# electron

./: BUILD.gn  DEPS  filenames.gni  techstack.md  techstack.yml
.circleci/: config.yml
atom/app/: atom_content_client.cc
atom/browser/: atom_browser_client.cc  atom_browser_context.cc  atom_browser_context.h  atom_browser_main_parts.cc  browser_mac.mm  common_web_contents_delegate.cc  native_window_mac.mm  native_window_views.cc
atom/browser/api/: atom_api_web_contents.cc  atom_api_web_contents.h
atom/browser/printing/: print_preview_message_handler.cc  print_preview_message_handler.h
atom/common/api/: atom_bindings.cc
atom/renderer/: renderer_client_base.cc
atom/renderer/printing/: print_render_frame_helper_delegate.cc
brightray/browser/mac/: cocoa_notification.h  cocoa_notification.mm  notification_center_delegate.mm
components/printing/: BUILD.gn
docs/tutorial/: mojave-dark-mode-guide.md
patches/common/chromium/: .patches  .patches.yaml  accelerator.patch  add_atomic_lib_to_dependencies_even_for_sysroot_builds.patch  add_realloc.patch  allow_nested_error_trackers.patch  allow_webview_file_url.patch  app_indicator_icon_menu.patch  blink-worker-enable-csp-in-file-scheme.patch  blink_file_path.patch  blink_fix_prototype_assert.patch  blink_initialization_order.patch  blink_local_frame.patch  blink_world_context.patch  boringssl_build_gn.patch  browser_compositor_mac.patch  browser_plugin_guest.patch  browser_plugin_wheel.patch  build_gn.patch  can_create_window.patch  chrome_key_systems.patch  chrome_printing_service_gn.patch  color_chooser.patch  command-ismediakey.patch  compositor_delegate.patch  content_browser_context.patch  content_browser_main_loop.patch  crashpad_http_status.patch  dcheck.patch  desktop_media_list.patch  disable-redraw-lock.patch  disable_detach_webview_frame.patch  disable_hidden.patch  disable_scroll_begin_dcheck.patch  disable_user_gesture_requirement_for_beforeunload_dialogs.patch  dom_storage_map.patch  dump_syms.patch  enable_osr_components.patch  (+46 more)
script/: apply-all-patches  git-export-patches
script/lib/: git.py  patches.py
spec/: api-browser-window-spec.js  api-menu-spec.js
tools/: gen-chrome-version-header.py
(+2 files in other folders)
