# Copyright (c) 2018 GitHub, Inc.
# Use of this source code is governed by the MIT license that can be
# found in the LICENSE file.

component("printing") {
  visibility = [ "//electron:electron_lib" ]
  defines = [ "IS_PRINTING_IMPL" ]
  sources = [
    "//chrome/browser/printing/print_job.cc",
    "//chrome/browser/printing/print_job.h",
    "//chrome/browser/printing/print_job_manager.cc",
    "//chrome/browser/printing/print_job_manager.h",
    "//chrome/browser/printing/print_job_worker.cc",
    "//chrome/browser/printing/print_job_worker.h",
    "//chrome/browser/printing/print_preview_message_handler.cc",
    "//chrome/browser/printing/print_preview_message_handler.h",
    "//chrome/browser/printing/print_view_manager_base.cc",
    "//chrome/browser/printing/print_view_manager_base.h",
    "//chrome/browser/printing/print_view_manager_basic.cc",
    "//chrome/browser/printing/print_view_manager_basic.h",
    "//chrome/browser/printing/print_view_manager_common.cc",
    "//chrome/browser/printing/print_view_manager_common.h",
    "//chrome/browser/printing/printer_manager_dialog.h",
    "//chrome/browser/printing/printer_manager_dialog_linux.cc",
    "//chrome/browser/printing/printer_manager_dialog_mac.mm",
    "//chrome/browser/printing/printer_manager_dialog_win.cc",
    "//chrome/browser/printing/printer_query.cc",
    "//chrome/browser/printing/printer_query.h",
    "//chrome/browser/printing/printing_message_filter.cc",
    "//chrome/browser/printing/printing_message_filter.h",
  ]

  deps = [
    "//chrome/services/printing:lib",
    "//components/printing/browser",
    "//components/printing/common",
    "//components/printing/renderer",
    "//components/services/pdf_compositor/public/cpp:utils",
    "//components/services/pdf_compositor/public/interfaces",
    "//printing",
  ]

  if (is_win) {
    sources += [
      "//chrome/browser/printing/pdf_to_emf_converter.cc",
      "//chrome/browser/printing/pdf_to_emf_converter.h",
      "//chrome/utility/printing_handler.cc",
      "//chrome/utility/printing_handler.h",
    ]
  }
}
